# Digital-Race-2020

./: .gitignore  README.md
dira_mpu9250_controller/config/: RTIMULib.ini
dira_mpu9250_controller/src/: dira_mpu9250_controller.cpp
dira_pca9685_controller/include/: dira_pca9685_controller.h
dira_pca9685_controller/launch/: run_car.launch
dira_pca9685_controller/src/: dira_pca9685_controller.cpp  dira_pca9685_subscriber.cpp
dira_peripheral_controller/launch/: dira_peripheral_controller.launch
dira_peripheral_controller/src/: dira_peripheral_subscriber.cpp
ros_astra_camera/launch/: astra.launch
team113/: CMakeLists.txt  package.xml
team113/launch/: run_map2.launch  sokhao.launch  submodules.launch
team113/sokhao/: README.md  auto_control.py  img_processing.py  predefine_param.py  run_simulation.py  sub_cam.py
team113/sokhao/submodules/: mycf.py
team113/src/: run_map2.py
team113/src/modules/: camera.py  car.py  fill_line.py  image_processing.py  param.py  sign_detector.py  sign_thread.py  sign_timer.py  yolo_detector.py  yolo_thread.py
team113/src/modules/primesense/: openni2.py
